--- a/finans/Index.html
+++ b/finans/Index.html
@@ -103,6 +103,7 @@
     
     
     <li class="sidebar-list-item">
+         <a href="ai.html"></a>
         <span class="material-symbols-outlined">robot_2</span>AI
     </li>
 
