--- a/finans/ai.html
+++ b/finans/ai.html
@@ -86,6 +86,7 @@
     </a>
     </li>
     <li class="sidebar-list-item">
+         <a href="ai.html"></a>
         <span class="material-symbols-outlined">robot_2</span>AI
     </li>
 
