--- a/finans/fnshedef.html
+++ b/finans/fnshedef.html
@@ -89,6 +89,7 @@
     </a>
     </li>
     <li class="sidebar-list-item">
+         <a href="ai.html"></a>
         <span class="material-symbols-outlined">robot_2</span>AI
     </li>
 
