--- a/finans/islemler.html
+++ b/finans/islemler.html
@@ -78,9 +78,11 @@
     </a>
     </li>
     <li class="sidebar-list-item">
+         <a href="fnshedef.html"></a>
         <span class="material-symbols-outlined">label_important</span>Finansal Hedefler
     </li>
     <li class="sidebar-list-item">
+         <a href="ai.html"></a>
         <span class="material-symbols-outlined">robot_2</span>AI
     </li>
 
