--- a/finans/settings.html
+++ b/finans/settings.html
@@ -28,9 +28,10 @@
     </div><span ></span>
     <div class="header-left">
     <div class="header-right">
-        <span class="material-symbols-outlined" onclick="toggleNotifications()"> notifications</span>
+        <button class="notper-button">
+            <span class="material-symbols-outlined" onclick="toggleNotifications()"> notifications</span>
+        </button>
         
-        <span class="material-symbols-outlined">person</span>
     </div>
 </header>
    <!--End Header-->
@@ -49,7 +50,7 @@
    <div class="sidebar-title">
       <div class="sidebar-brand">
         <span class="material-symbols-outlined">finance</span>
-         <span>Kişisel Finans</span>
+         <span>CepFinans</span>
       </div>
       <span class="material-symbols-outlined" onclick="closeSidebar()" >cancel</span>
    </div>
@@ -86,8 +87,9 @@
     </a>
     </li>
     <li class="sidebar-list-item">
-         <a href="ai.html"></a>
+        <a href="ai.html">
         <span class="material-symbols-outlined">robot_2</span>AI
+    </a>
     </li>
 
      
