--- a/finans/passwordreset.html
+++ b/finans/passwordreset.html
@@ -1,54 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ForgotMYpassword</title>
-    <link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:ital,wght@0,200;0,300;0,500;0,600;0,700;0,800;0,900;1,500;1,600&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-     <!-- Metaeryal icon-->
-     <link href="https://fonts.googleapis.com/icon?family=Material+Symbols+Outlined" rel="stylesheet">
-     
-     <link rel="stylesheet" href="css/style.css">
-
-     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Şifre Sıfırlama</title>
+  <link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro&family=Roboto&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Symbols+Outlined" rel="stylesheet">
+  <link rel="stylesheet" href="css/style.css">
+  <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
-   
-   <div class="row">
-      <h2 class="information-text">Emailinize Gönderilen Kodu ve Yeni Şifrenizi Giriniz</h2>
-      <div class="form-group">
-           <input type="text" class="input-text"><p><label for="usernum">Kod</label></p>
-           <input type="password" ><p><label for="userpass">Yeni Şifre</label></p>
-           <a href="Login.html">
-           <button>Şifre Sıfırla</button>
-        </a>
-      </div>
 
-      <div class="footer">
-        <h5> Üye Değilsen ? <a href="register.html">Üye Ol</a></h5>
-        <h5> Zaten Hesabım Var. <a href="Login.html"> Giriş Yap</a></h5>
-      </div>
-   </div>
+  <div class="row">
+    <h2 class="information-text">Emailinize gönderilen kodu ve yeni şifrenizi giriniz</h2>
+    <div class="form-group">
+      <input type="text" id="reset-token" class="input-text">
+      <p><label for="reset-token">Kod</label></p>
 
+      <input type="password" id="new-password">
+      <p><label for="new-password">Yeni Şifre</label></p>
+
+      <button id="reset-password-btn">Şifre Sıfırla</button>
     </div>
 
+    <div class="footer">
+      <h5>Üye değil misin? <a href="register.html">Üye Ol</a></h5>
+      <h5>Zaten hesabım var. <a href="Login.html">Giriş Yap</a></h5>
+    </div>
+  </div>
 
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/apexcharts/4.5.0/apexcharts.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/4.4.1/chart.min.js"></script>
+  <script src="js/scripts.js"></script>
 
+  <script>
+    document.getElementById("reset-password-btn").addEventListener("click", async function () {
+      const token = document.getElementById("reset-token").value.trim();
+      const newPassword = document.getElementById("new-password").value.trim();
 
+      if (!token || !newPassword) {
+        alert("Lütfen hem kodu hem de yeni şifreyi giriniz.");
+        return;
+      }
 
+      try {
+        const response = await fetch("http://127.0.0.1:8001/auth/reset_password", {
+          method: "POST",
+          headers: {
+            "Content-Type": "application/json"
+          },
+          body: JSON.stringify({
+            token: token,
+            new_password: newPassword
+          })
+        });
 
+        const data = await response.json();
 
+        if (response.ok) {
+          alert("✅ " + data.message);
+          window.location.href = "Login.html"; // Giriş sayfasına yönlendir
+        } else {
+          alert("❌ " + data.detail);
+        }
 
+      } catch (error) {
+        console.error("Hata:", error);
+        alert("⚠️ Sunucuya ulaşılamadı.");
+      }
+    });
+  </script>
 
-
-   <!-- sCRİPTS-->
-    <!-- APEXCHARTS-->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/apexcharts/4.5.0/apexcharts.min.js"></script>
-    <!-- CUSTOM CS-->
-    <!--chartjs-->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/4.4.1/chart.min.js" ></script>
-
-    <script src="js/scripts.js"></script>
 </body>
 </html>
