--- a/finans/Login.html
+++ b/finans/Login.html
@@ -26,7 +26,7 @@
                 </div>
 
                 <div class="forgot-link">
-                    <a href="#">Şifremi Unuttum?</a>
+                    <a href="forgotmypass.html">Şifremi Unuttum?</a>
                 </div>
                 <button type="submit" class="btn-btn">Login</button>
             </form>
